--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,189 @@
+/* fonts */
+@font-face {
+  font-family: "Exo2-Black";
+  src: url("../assets/fonts/Exo2-Black.ttf") format("truetype");
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Exo2-BlackItalic";
+  src: url("../assets/fonts/Exo2-BlackItalic.ttf") format("truetype");
+  font-weight: 900;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Exo2-Bold";
+  src: url("../assets/fonts/Exo2-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Exo2-BoldItalic";
+  src: url("../assets/fonts/Exo2-BoldItalic.ttf") format("truetype");
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Exo2-ExtraLight";
+  src: url("../assets/fonts/Exo2-ExtraLight.ttf") format("truetype");
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Exo2-ExtraLightItalic";
+  src: url("../assets/fonts/Exo2-ExtraLightItalic.ttf") format("truetype");
+  font-weight: 200;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Exo2-Italic";
+  src: url("../assets/fonts/Exo2-Italic.ttf") format("truetype");
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Exo2-Light";
+  src: url("../assets/fonts/Exo2-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Exo2-LightItalic";
+  src: url("../assets/fonts/Exo2-LightItalic.ttf") format("truetype");
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Exo2-Medium";
+  src: url("../assets/fonts/Exo2-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Exo2-MediumItalic";
+  src: url("../assets/fonts/Exo2-MediumItalic.ttf") format("truetype");
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Exo2-Regular";
+  src: url("../assets/fonts/Exo2-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Exo2-SemiBold";
+  src: url("../assets/fonts/Exo2-SemiBold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Exo2-SemiBoldItalic";
+  src: url("../assets/fonts/Exo2-SemiBoldItalic.ttf") format("truetype");
+  font-weight: 600;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Exo2-Thin";
+  src: url("../assets/fonts/Exo2-Thin.ttf") format("truetype");
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Exo2-ThinItalic";
+  src: url("../assets/fonts/Exo2-ThinItalic.ttf") format("truetype");
+  font-weight: 100;
+  font-style: italic;
+}
+
+/* global styles */
+:root {
+  --fire: #ff4500;
+  --air: #fff5da;
+  --earth: #2bb32b;
+  --water: #0ba3c9;
+  --wood: #7f3500;
+  --iron: #333333;
+}
+
+body {
+  font-family: "Exo2-Regular", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+h1 {
+  font-family: "Exo2-Bold", sans-serif;
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+}
+
+h2 {
+  font-family: "Exo2-SemiBold", sans-serif;
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+h3 {
+  font-family: "Exo2-Medium", sans-serif;
+  font-size: 1.75rem;
+  margin-bottom: 1rem;
+}
+
+h4 {
+  font-family: "Exo2-Regular", sans-serif;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+h5 {
+  font-family: "Exo2-Light", sans-serif;
+  font-size: 1.25rem;
+  margin-bottom: 1rem;
+}
+
+h6 {
+  font-family: "Exo2-ExtraLight", sans-serif;
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+
+p {
+  font-family: "Exo2-Regular", sans-serif;
+  margin-bottom: 1rem;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+em {
+  font-family: "Exo2-Italic", sans-serif;
+}
+
+strong {
+  font-family: "Exo2-Bold", sans-serif;
+}
+
 /* styles for index.html */
 
 /* styles for game-anonymous.html */
